--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <body>
     <h1>My Project Webpages</h1>
     <ul>
-        <li><a href="https://username.github.io/repo1" target="_blank">Project 1: Title</a></li>
-        <li><a href="https://username.github.io/repo2" target="_blank">Project 2: Title</a></li>
-        <li><a href="https://username.github.io/repo3" target="_blank">Project 3: Title</a></li>
-        <li><a href="https://username.github.io/repo4" target="_blank">Project 4: Title</a></li>
+        <li><a href="https://mohammedluthfi10.github.io/Custom-OS-for-Raspberry-Pi-4-with-UART-and-GPIO-Support/" target="_blank">Project 1: Title</a></li>
+        <li><a href="https://mohammedluthfi10.github.io/Assembly-Based-Real-Time-Clock-Using-STM32F103/" target="_blank">Project 2: Title</a></li>
+        <li><a href="https://mohammedluthfi10.github.io/Custom-Linux-Kernel-Module-with-Device-Tree-Integration-on-Raspberry-Pi/" target="_blank">Project 3: Title</a></li>
+        <li><a href="https://mohammedluthfi10.github.io/Real-Time-Audio-Transmission-with-STM32-and-ESP32/" target="_blank">Project 4: Title</a></li>
     </ul>
 </body>
 </html>
