--- a/index.html
+++ b/index.html
@@ -192,7 +192,24 @@
                     </article>
                 </div>
             </section>
-        
+                    <!-- Articles Section -->
+<section id="articles">
+    <header class="major">
+        <h2>Articles</h2>
+    </header>
+    <div class="posts">
+        <article>
+            <a href="article/ElectricVehicle.html" class="image">
+                <img src="images/article_thumbnail.jpg" alt="Electric Vehicle Optimization" />
+            </a>
+            <h3>CAN Bus Optimization and Monitoring for Electric Vehicle Systems</h3>
+            <p>Exploring the methods to optimize CAN Bus communication and monitoring in electric vehicle systems for enhanced performance.</p>
+            <ul class="actions">
+                <li><a href="article/ElectricVehicle.html" class="button">Read Article</a></li>
+            </ul>
+        </article>
+    </div>
+</section>
             <!-- Contact Section -->
             <section id="contact">
                 <header class="major">
