--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
     </header>
     <div class="posts">
         <article>
-            <a href="article/ElectricVehicle.html" class="image">
+            <a href="article/Electricvehicle.html" class="image">
                 <img src="images/article_thumbnail.jpg" alt="Electric Vehicle Optimization" />
             </a>
             <h3>CAN Bus Optimization and Monitoring for Electric Vehicle Systems</h3>
             <p>Exploring the methods to optimize CAN Bus communication and monitoring in electric vehicle systems for enhanced performance.</p>
             <ul class="actions">
-                <li><a href="article/ElectricVehicle.html" class="button">Read Article</a></li>
+                <li><a href="article/Electricvehicle.html" class="button">Read Article</a></li>
             </ul>
         </article>
     </div>
